--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="signUp">SignUp</string>
     <string name="timeline">Timeline</string>
     <string name="createAnAccount">Create an account</string>
+    <string name="toggleVisivility">Toggle visibility</string>
 </resources>
