--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="timeline">Timeline</string>
     <string name="createAnAccount">Create an account</string>
     <string name="toggleVisivility">Toggle visibility</string>
+    <string name="about">About</string>
 </resources>
