Shown an error message in the UI for device disconnected error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="about">About</string>
     <string name="duplicateAccountError">An account with this email already exists</string>
     <string name="createAccountError">Could not create an account</string>
+    <string name="offlineError">You seem to be offline</string>
 </resources>
