--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="duplicateAccountError">An account with this email already exists</string>
     <string name="createAccountError">Could not create an account</string>
     <string name="offlineError">You seem to be offline</string>
+    <string name="badEmailError">Invalid email format</string>
+    <string name="badPasswordError">Invalid password format</string>
 </resources>
